force-app/main/default/objects/Contract/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Attorney)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>