force-app/main/default/objects/Contract/fields/Attorney_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Reference_ID__c</fullName>
    <label>Attorney Reference ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>