force-app/main/default/objects/Contract/fields/Customer_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_ID__c</fullName>
    <label>Customer Reference ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>