force-app/main/default/objects/Contract/fields/IP_Realted_IP__c.field-meta.xml
<CustomField>
    <fullName>IP_Realted_IP__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the Contract to the Technology record covered by the agreement.</description>
    <inlineHelpText>Select the Technology record covered by this contract or agreement.</inlineHelpText>
    <label>Related Technology</label>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>