force-app/main/default/objects/Contract/fields/Kind_of_Mark__c.field-meta.xml
<CustomField>
    <fullName>Kind_of_Mark__c</fullName>
    <label>Kind of Mark</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Word</fullName>
            </value>
            <value>
                <fullName>Picture</fullName>
            </value>
            <value>
                <fullName>Colour</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Hologram</fullName>
            </value>
            <value>
                <fullName>Smell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>