force-app/main/default/objects/Contract/fields/Mark__c.field-meta.xml
<CustomField>
    <fullName>Mark__c</fullName>
    <label>Mark</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>