force-app/main/default/objects/Contract/fields/Tech_Transfer_Manager__c.field-meta.xml
<CustomField>
    <fullName>Tech_Transfer_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Transfer Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>