force-app/main/default/objects/Contract/fields/Trademark_Classes__c.field-meta.xml
<CustomField>
    <fullName>Trademark_Classes__c</fullName>
    <label>Trademark Classes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WIPO_NCL_Classes</valueSetName>
    </valueSet>
</CustomField>