force-app/main/default/objects/Contract/fields/Trademark_Number__c.field-meta.xml
<CustomField>
    <fullName>Trademark_Number__c</fullName>
    <label>Trademark Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>