force-app/main/default/objects/Contract/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <description>A Commercial Contract is one that binds two parties to an agreement which determines the financial sale of IP and technologies.</description>
    <label>Commercial</label>
</RecordType>