force-app/main/default/objects/Contract/recordTypes/Trademark.recordType-meta.xml
<RecordType>
    <fullName>Trademark</fullName>
    <active>true</active>
    <description>A trademark is a sign capable of distinguishing the goods or services of one enterprise from those of other enterprises. Trademarks are protected by intellectual property rights.</description>
    <label>Trademark</label>
</RecordType>